fix slider button z-index issue

--- a/cigionline/static/blocks/slider_gallery_block/css/slider_gallery_block.scss
+++ b/cigionline/static/blocks/slider_gallery_block/css/slider_gallery_block.scss
@@ -15,6 +15,7 @@
       position: relative;
       top: unset;
       bottom: 1px;
+      z-index: 9;
 
       .swiper-pagination-bullet {
         width: 10px;
